# lprecognition

./: .gitignore  README.md  app.py  build.py  inference_engine.py  lprnet_onnx.py  lprnet_onnx_24x94.py  lprnet_postprocess.py  main.py  pipe_cfg.json  pipeline.py  preprocess.py  pyproject.toml  quant.py  render.py  saver.py  utils.py  yolo_onnnx.py
models/: stn_lpr_opt.onnx  stn_lpr_opt_2.onnx
